Fix alignment to be in middle

--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ strong {
   font-weight: var(--fw-bold);
 }
 
+nav {
+  display: none;
+}
+
 :focus {
   outline: 3px solid var(--clr-accent);
   outline-offset: 3px;
@@ -138,6 +142,7 @@ section.intro > .subtitle {
   section.intro {
     display: grid;
     width: min-content;
+    margin: 0 auto;
     grid-column-gap: 1em;
     grid-template-areas:
       "img title"
